--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
 		"silex/silex":"~2.0",
 		"symfony/http-foundation": "^3.1",
     "doctrine/dbal": "^2.5"
+	},
+	"require": {
+		"symfony/browser-kit": "^3.3"
 	}
 }
